Update helyos_core version

--- a/01-demo-applications/backend/docker-compose-backend.yml
+++ b/01-demo-applications/backend/docker-compose-backend.yml
@@ -4,7 +4,7 @@
 services:
 
     helyos_core:
-        image: helyosframework/helyos_core:2.2.0-rc3
+        image: helyosframework/helyos_core:2.2.0
 
         ports:
             - 5002:5002 # Websocket: Push Notifications.
