--- a/02-improve-demo-applications/backend/docker-compose-backend.yml
+++ b/02-improve-demo-applications/backend/docker-compose-backend.yml
@@ -19,7 +19,7 @@ services:
 
 
     helyos_core:
-        image: helyosframework/helyos_core:2.2.0-rc1
+        image: helyosframework/helyos_core:2.2.0
 
         ports:
             - 5002:5002 # Websocket: Push Notifications.
